# Course_project-

./: .gitignore  README.md  config.py  my_report.json  pyproject.toml  requirements.txt
data/: operations.xlsx
src/: reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
