[tool.poetry]
name = "projectcours"
version = "0.1.0"
description = ""
authors = ["Donskov <bionet1971@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
pytest = "^8.4.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
